--- a/index.html
+++ b/index.html
@@ -1,49 +1,36 @@
----
-description: Ravi Docs
----
-
-# Home
-
-![GitHub issues](https://img.shields.io/github/issues/Jeffreyz1129/ravibot.website.api?style=for-the-badge) 
-![GitHub pull requests](https://img.shields.io/github/issues-pr/Jeffreyz1129/ravibot.website.api?style=for-the-badge) 
-![GitHub Repo stars](https://img.shields.io/github/stars/Jeffreyz1129/ravibot.website.api?style=for-the-badge)
-
-* Join [**Ravi Support** ](https://discord.gg/gv2vjKqZP7)for regular updates & giveaways!
-* **Note**: Ravi's bot prefix is `!` ( not customizable)
-* **Invite:** [**Click Here**](https://discord.com/oauth2/authorize?client\_id=809561873040146461\&scope=bot\&permissions=2147483647)
-
-### Introduction
-
-**Ravi a semi Public Customizable Bot, And a utility Ticketing Bot Towards apm portals, to help apm managers.**
-
-### Our Bot Developers
-
-* `! kim jaehyun.#8775`
-* `いちかちゃん#3599`
-
-### Getting Started
-
-The first step is to make sure **Ravi** is actually in your guild! You can invite Both of these bots to guilds you have **Manage Server** permissions.
-
-* **Tip:** The Bot has **81** commands in total.
-* By default, **Ravi** will ask for Administrator permissions, and it is highly recommended that you grant them. You may also customize the bot's permissions by editing the bot's role. See FAQ for more details on customizing permissions.
-* **Important:** Giving **Ravi** Administrator permissions to ensure functionality.
-
-### Configuration
-
-Once you have added These bots it will keep track of commands executed and the Bot Owners can see everything you do with the Integration. In order to take advantage of all of **Ravi**'s features, please configure it in the bot settings.
-
-### Documentation Syntax
-
-* `[!]` - prefix
-* `< >` required parameter
-* `( )`- optional parameter
-* `<thing1 | thing2>` - select one of the given options
-
-### Note from the owners
-
-We receive all Dms we get from our bots get! please do not troll or spam It's DMS, you will be banned & blacklisted from using Them. Thank you for using the Bots, So much love.
-
-### Signed,
-
-Jeffrey & Meko
+<!DOCTYPE html>
+<!-- Created By Jeffrey -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!------<title> Website Layout | CodingLab</title>------>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+   </head>
+<body>
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="#">RaviBot Website API</a>
+      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="img"></div>
+  <div class="center">
+    <div class="title">Create Amazing Website</div>
+    <div class="sub_title">Pure HTML & CSS Only</div>
+    <div class="btns">
+      <button>Learn More</button>
+      <button>Subscribe</button>
+    </div>
+  </div>
+</body>
+</html>
